# nn-planning

./: .gitignore  CMakeLists.txt  README.md  outline.txt
cmake/: ExternalAntlr4Cpp.cmake
grammars/: DOT.g4  emptylexer.g4  emptylexer.tokens
src/: antlr-main.cpp  console_colors.h  executor-path.cpp  executor-planner.cpp  geometry.h  height_map.cpp  height_map.h  main-maptest.cpp  main-pathfollowing.cpp  main-planning.cpp  main-reachtarget.cpp  manta_controller.cpp  manta_controller.h  path_follower.cpp  path_follower.h  path_following_task.cpp  path_following_task.h  path_planner.cpp  path_planner.h  pid_controller.cpp  pid_controller.h  planner.h  reach_target_task.cpp  reach_target_task.h  robot_task.h  robot_task_driver.cpp  robot_task_driver.h  rrt_planner.cpp  rrt_planner.h  rrt_star_planner.cpp  rrt_star_planner.h  svg_utils.cpp  svg_utils.h  svg_writer.cpp  svg_writer.h  traversability_graph.cpp  traversability_graph.h  vrep_client.cpp  vrep_client.h
test/: planning-test-driver.cpp
vrepscenes/: manta_heightfield.ttt
